# trabalho-orquestracao-msi

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/clausulas/: page.tsx
frontend/app/admin/funcoes/: page.tsx
frontend/app/propostas/: page.tsx
frontend/app/propostas/[id]/: page.tsx
frontend/app/propostas/nova/: page.tsx
frontend/components/: app-sidebar.tsx  health-banner.tsx  proposal-status-badge.tsx  risk-badge.tsx  store-bootstrap.tsx
frontend/components/editor/: clause-picker.tsx  section-accordion.tsx
frontend/components/pipeline/: agent-card.tsx  timeline.tsx
frontend/components/preview/: print-view.tsx
frontend/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  radio-group.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/components/wizard/: stepper.tsx
frontend/lib/: api.ts  export-docx.ts  parser.ts  seed.ts  store.ts  templates.ts  types.ts  use-execution-progress.ts  utils.ts  validation.ts
knowledge/: base_historica_obras.xlsx  tabela_custos.xlsx
src/trabalho_orquestracao/: crew.py  main.py  progress.py
src/trabalho_orquestracao/config/: agents.yaml  tasks.yaml
src/trabalho_orquestracao/web/: app.py
src/trabalho_orquestracao/web/static/: index.html
