[project]
name = "trabalho_orquestracao"
version = "0.1.0"
description = "trabalho_orquestracao using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "mcp>=1.26.0",
]

[project.scripts]
trabalho_orquestracao = "trabalho_orquestracao.main:run"
run_crew = "trabalho_orquestracao.main:run"
train = "trabalho_orquestracao.main:train"
replay = "trabalho_orquestracao.main:replay"
test = "trabalho_orquestracao.main:test"
run_with_trigger = "trabalho_orquestracao.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
